--- a/charts/hello-world/values.yaml
+++ b/charts/hello-world/values.yaml
@@ -3,7 +3,7 @@
 # Declare variables to be passed into your templates.
 
 replicaCount: 1
-
+appName: "ego"
 image:
   repository: nginx
   pullPolicy: IfNotPresent
