--- a/charts/hello-world/templates/deployment.yaml
+++ b/charts/hello-world/templates/deployment.yaml
@@ -1,7 +1,7 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: {{ include "values.appName" . }}-${BP_IMAGE_TAG}
+  name: {{ .Values.appName . }}-${BP_IMAGE_TAG}
   labels:
     {{- include "hello-world.labels" . | nindent 4 }}
 spec:
